feat(completions): update psc

--- a/completions/psc/language/en-US.json
+++ b/completions/psc/language/en-US.json
@@ -1576,8 +1576,8 @@
     "add": {
       "tip": "Add completion --- {{ $completion }}",
       "example": [
-        "E: psc add git            --- Add git\n",
-        "   psc add git docker     --- Add git,docker"
+        "E: psc add git           --- Add git\n",
+        "   psc add git scoop     --- Add git and scoop"
       ],
       "doing": "<@Green>Adding completion --- <@Magenta>{{ $completion }}",
       "show_alias": "<@Yellow>The default trigger alias: <@Magenta>{{ $config.alias -join ' ' }}",
@@ -1620,8 +1620,8 @@
     "rm": {
       "tip": "Remove completion --- {{ $completion }}",
       "example": [
-        "E: psc rm git            --- Remove git\n",
-        "   psc rm git docker     --- Remove git,docker"
+        "E: psc rm git           --- Remove git\n",
+        "   psc rm git scoop     --- Remove git and scoop"
       ],
       "done": "<@Green>Completion <@Magenta>{{ $completion }}<@Green> has been removed.",
       "err": {
@@ -1685,8 +1685,8 @@
     "which": {
       "tip": "Locate completion storage location --- {{ $completion }}",
       "example": [
-        "E: psc which git            --- Get the location of git\n",
-        "   psc which git docker     --- Get the location of git and docker"
+        "E: psc which git           --- Get the location of git\n",
+        "   psc which git scoop     --- Get the location of git and scoop"
       ],
       "err": {
         "min": [
@@ -1879,8 +1879,8 @@
     },
     "menu": {
       "example": [
-        "E: psc menu config enable_tip 0                     --- Hide completion tip\n",
-        "   psc menu config enable_enter_when_single 1       --- Auto-apply when there's only one completion item\n",
+        "E: psc menu config enable_enter_when_single 1       --- Auto-apply when there's only one completion item\n",
+        "   psc menu config enable_tip 0                     --- Hide completion tip\n",
         "   psc menu symbol SpaceTab \"\"                      --- Hide symbol\n",
         "   psc menu line_theme single_line_round_border     --- Toggle the built-in border style theme"
       ],
@@ -1931,9 +1931,10 @@
       },
       "config": {
         "example": [
-          "E: psc menu config enable_tip 0       --- Hide completion tip\n",
-          "   psc menu config enable_menu 0      --- Disable completion menu provided by PSCompletions module\n",
-          "   psc menu config filter_symbol []   --- Set the symbol of the filter area"
+          "E: psc menu config enable_enter_when_single 1     --- Auto-apply when there's only one completion item\n",
+          "   psc menu config enable_tip 0                   --- Hide completion tip\n",
+          "   psc menu config enable_menu 0                  --- Disable completion menu provided by PSCompletions module\n",
+          "   psc menu config filter_symbol []               --- Set the symbol of the filter area"
         ],
         "err": {
           "v_ge": "<@Red>It should be an integer number greater than or equal to<@Magenta>{{ $min }}.",
