--- a/completions/psc/language/zh-CN.json
+++ b/completions/psc/language/zh-CN.json
@@ -1570,8 +1570,8 @@
     "add": {
       "tip": "添加补全 --- {{ $completion }}",
       "example": [
-        "E: psc add git            --- 添加 git 补全\n",
-        "   psc add git docker     --- 添加 git 和 docker 补全"
+        "E: psc add git           --- 添加 git 补全\n",
+        "   psc add git scoop     --- 添加 git 和 scoop 补全"
       ],
       "doing": "<@Green>正在添加补全 --- <@Magenta>{{ $completion }}",
       "show_alias": "<@Yellow>默认的触发别名: <@Magenta>{{ $config.alias -join ' ' }}",
@@ -1614,8 +1614,8 @@
     "rm": {
       "tip": "移除补全 --- {{ $completion }}",
       "example": [
-        "E: psc rm git            --- 移除 git 补全\n",
-        "   psc rm git docker     --- 移除 git 和 docker 补全"
+        "E: psc rm git           --- 移除 git 补全\n",
+        "   psc rm git scoop     --- 移除 git 和 scoop 补全"
       ],
       "done": "<@Green>补全 <@Magenta>{{ $completion }}<@Green> 成功被移除",
       "err": {
@@ -1630,7 +1630,7 @@
       "tip": "更新补全 --- {{ $completion }}",
       "example": [
         "E: psc update                 --- 检查更新\n",
-        "   psc update *               --- 更新所有的有更新的补全\n",
+        "   psc update *               --- 更新所有待更新的补全\n",
         "   psc update psc             --- 更新 psc 补全\n",
         "   psc update psc git bun     --- 更新 psc、git 和 bun 补全"
       ],
@@ -1679,8 +1679,8 @@
     "which": {
       "tip": "定位补全存储位置 --- {{ $completion }}",
       "example": [
-        "E: psc which git            --- 返回 git 补全的存储位置\n",
-        "   psc which git docker     --- 返回 git 和 docker 补全的存储位置"
+        "E: psc which git           --- 返回 git 补全的存储位置\n",
+        "   psc which git scoop     --- 返回 git 和 scoop 补全的存储位置"
       ],
       "err": {
         "min": [
@@ -1873,8 +1873,8 @@
     },
     "menu": {
       "example": [
-        "E: psc menu config enable_tip 0                     --- 不显示补全提示信息\n",
-        "   psc menu config enable_enter_when_single 1       --- 只有一个补全项时自动应用\n",
+        "E: psc menu config enable_enter_when_single 1       --- 只有一个补全项时自动应用\n",
+        "   psc menu config enable_tip 0                     --- 不显示补全提示信息\n",
         "   psc menu symbol SpaceTab \"\"                      --- 隐藏符号\n",
         "   psc menu line_theme single_line_round_border     --- 切换内置的边框线条主题"
       ],
@@ -1925,9 +1925,10 @@
       },
       "config": {
         "example": [
-          "E: psc menu config enable_tip 0       --- 不显示补全提示信息\n",
-          "   psc menu config enable_menu 0      --- 禁用模块提供的补全菜单\n",
-          "   psc menu config filter_symbol []   --- 设置过滤区域(左上角), 左侧和右侧的符号, 默认为 []"
+          "E: psc menu config enable_enter_when_single 1     --- 只有一个补全项时自动应用\n",
+          "   psc menu config enable_tip 0                   --- 不显示补全提示信息\n",
+          "   psc menu config enable_menu 0                  --- 禁用模块提供的补全菜单\n",
+          "   psc menu config filter_symbol []               --- 设置过滤区域(左上角), 左侧和右侧的符号, 默认为 []"
         ],
         "err": {
           "v_ge": "<@Red>应该是一个大于等于 <@Magenta>{{ $min }}<@Red> 的整数数字",
