feat(completions): update jj

--- a/completions/jj/language/en-US.json
+++ b/completions/jj/language/en-US.json
@@ -549,9 +549,9 @@
           ]
         },
         {
-          "name": "--edit",
+          "name": "--editor",
           "tip": [
-            "Open an editor"
+            "Open an editor to edit the change description"
           ]
         }
       ]
@@ -1003,15 +1003,6 @@
               ]
             },
             {
-              "name": "-N",
-              "alias": [
-                "--allow-new"
-              ],
-              "tip": [
-                "Allow pushing new bookmarks"
-              ]
-            },
-            {
               "name": "--allow-empty-description",
               "tip": [
                 "Allow pushing commits with empty descriptions"
@@ -1390,12 +1381,12 @@
           "next": []
         },
         {
-          "name": "-d",
+          "name": "-o",
           "alias": [
-            "--destination"
+            "--onto"
           ],
           "tip": [
-            "U: -d, --destination <REVSETS>",
+            "U: -o, --onto <REVSETS>",
             "The revision(s) to rebase onto (can be repeated to create a merge commit)"
           ],
           "next": []
@@ -1634,7 +1625,36 @@
     {
       "name": "split",
       "tip": [
+        "U: split [OPTIONS] [FILESETS]...",
         "Split a revision in two"
+      ],
+      "options": [
+        {
+          "name": "-i",
+          "alias": [
+            "--interactive"
+          ],
+          "tip": [
+            "Interactively choose which parts to split"
+          ]
+        },
+        {
+          "name": "--tool",
+          "tip": [
+            "U: --tool <NAME>",
+            "Specify diff editor to be used (implies --interactive)"
+          ]
+        },
+        {
+          "name": "-r",
+          "alias": [
+            "--revision"
+          ],
+          "tip": [
+            "U: -r, --revision <REVSET>",
+            "The revision to split [default: @]"
+          ]
+        }
       ]
     },
     {
@@ -1679,12 +1699,12 @@
           "next": []
         },
         {
-          "name": "-d",
+          "name": "-o",
           "alias": [
-            "--destination"
+            "--onto"
           ],
           "tip": [
-            "U: -d, --destination <REVSETS>",
+            "U: -o, --onto <REVSETS>",
             "(Experimental) The revision(s) to use as parent for the new commit (can be repeated to create a merge commit)"
           ],
           "next": []
