feat(scripts): update template
For the common --version and --help, it is not recommended to add -v and -h

--- a/scripts/template/language/en-US.json
+++ b/scripts/template/language/en-US.json
@@ -13,24 +13,16 @@
   ],
   "options": [
     {
-      "name": "-V",
-      "alias": [
-        "--version"
-      ],
+      "name": "--version",
       "tip": [
-        "U: -V, --version",
         "Show the version."
       ]
     }
   ],
   "common_options": [
     {
-      "name": "-h",
-      "alias": [
-        "--help"
-      ],
+      "name": "--help",
       "tip": [
-        "U: -h, --help",
         "Show the help."
       ]
     }
