--- a/scripts/template/language/zh-CN.json
+++ b/scripts/template/language/zh-CN.json
@@ -13,24 +13,16 @@
   ],
   "options": [
     {
-      "name": "-V",
-      "alias": [
-        "--version"
-      ],
+      "name": "--version",
       "tip": [
-        "U: -V, --version",
         "显示版本信息。"
       ]
     }
   ],
   "common_options": [
     {
-      "name": "-h",
-      "alias": [
-        "--help"
-      ],
+      "name": "--help",
       "tip": [
-        "U: -h, --help",
         "显示帮助信息。"
       ]
     }
