feat(completions): update psc

--- a/completions/psc/language/en-US.json
+++ b/completions/psc/language/en-US.json
@@ -834,10 +834,712 @@
               ],
               "next": [
                 {
-                  "name": "Tab",
+                  "name": "\"Tab\"",
                   "tip": [
                     "Set to Tab key (Default)"
                   ]
+                },
+                {
+                  "name": "\"F1\""
+                },
+                {
+                  "name": "\"F2\""
+                },
+                {
+                  "name": "\"F3\""
+                },
+                {
+                  "name": "\"F4\""
+                },
+                {
+                  "name": "\"F5\""
+                },
+                {
+                  "name": "\"F6\""
+                },
+                {
+                  "name": "\"F7\""
+                },
+                {
+                  "name": "\"F8\""
+                },
+                {
+                  "name": "\"F9\""
+                },
+                {
+                  "name": "\"0\""
+                },
+                {
+                  "name": "\"1\""
+                },
+                {
+                  "name": "\"2\""
+                },
+                {
+                  "name": "\"3\""
+                },
+                {
+                  "name": "\"4\""
+                },
+                {
+                  "name": "\"5\""
+                },
+                {
+                  "name": "\"6\""
+                },
+                {
+                  "name": "\"7\""
+                },
+                {
+                  "name": "\"8\""
+                },
+                {
+                  "name": "\"9\""
+                },
+                {
+                  "name": "\"a\""
+                },
+                {
+                  "name": "\"b\""
+                },
+                {
+                  "name": "\"c\""
+                },
+                {
+                  "name": "\"d\""
+                },
+                {
+                  "name": "\"e\""
+                },
+                {
+                  "name": "\"f\""
+                },
+                {
+                  "name": "\"g\""
+                },
+                {
+                  "name": "\"h\""
+                },
+                {
+                  "name": "\"i\""
+                },
+                {
+                  "name": "\"j\""
+                },
+                {
+                  "name": "\"k\""
+                },
+                {
+                  "name": "\"l\""
+                },
+                {
+                  "name": "\"m\""
+                },
+                {
+                  "name": "\"n\""
+                },
+                {
+                  "name": "\"o\""
+                },
+                {
+                  "name": "\"p\""
+                },
+                {
+                  "name": "\"q\""
+                },
+                {
+                  "name": "\"r\""
+                },
+                {
+                  "name": "\"s\""
+                },
+                {
+                  "name": "\"t\""
+                },
+                {
+                  "name": "\"u\""
+                },
+                {
+                  "name": "\"v\""
+                },
+                {
+                  "name": "\"w\""
+                },
+                {
+                  "name": "\"x\""
+                },
+                {
+                  "name": "\"y\""
+                },
+                {
+                  "name": "\"z\""
+                },
+                {
+                  "name": "\"A\""
+                },
+                {
+                  "name": "\"B\""
+                },
+                {
+                  "name": "\"C\""
+                },
+                {
+                  "name": "\"D\""
+                },
+                {
+                  "name": "\"E\""
+                },
+                {
+                  "name": "\"F\""
+                },
+                {
+                  "name": "\"G\""
+                },
+                {
+                  "name": "\"H\""
+                },
+                {
+                  "name": "\"I\""
+                },
+                {
+                  "name": "\"J\""
+                },
+                {
+                  "name": "\"K\""
+                },
+                {
+                  "name": "\"L\""
+                },
+                {
+                  "name": "\"M\""
+                },
+                {
+                  "name": "\"N\""
+                },
+                {
+                  "name": "\"O\""
+                },
+                {
+                  "name": "\"P\""
+                },
+                {
+                  "name": "\"Q\""
+                },
+                {
+                  "name": "\"R\""
+                },
+                {
+                  "name": "\"S\""
+                },
+                {
+                  "name": "\"T\""
+                },
+                {
+                  "name": "\"U\""
+                },
+                {
+                  "name": "\"V\""
+                },
+                {
+                  "name": "\"W\""
+                },
+                {
+                  "name": "\"X\""
+                },
+                {
+                  "name": "\"Y\""
+                },
+                {
+                  "name": "\"Z\""
+                },
+                {
+                  "name": "\"!\""
+                },
+                {
+                  "name": "\"@\""
+                },
+                {
+                  "name": "\"#\""
+                },
+                {
+                  "name": "\"$\""
+                },
+                {
+                  "name": "\"%\""
+                },
+                {
+                  "name": "\"^\""
+                },
+                {
+                  "name": "\"&\""
+                },
+                {
+                  "name": "\"*\""
+                },
+                {
+                  "name": "\"(\""
+                },
+                {
+                  "name": "\")\""
+                },
+                {
+                  "name": "\":\""
+                },
+                {
+                  "name": "\";\""
+                },
+                {
+                  "name": "\"?\""
+                },
+                {
+                  "name": "\"/\""
+                },
+                {
+                  "name": "\"~\""
+                },
+                {
+                  "name": "\"`\""
+                },
+                {
+                  "name": "\"{\""
+                },
+                {
+                  "name": "\"[\""
+                },
+                {
+                  "name": "\"|\""
+                },
+                {
+                  "name": "\"\\\""
+                },
+                {
+                  "name": "\"}\""
+                },
+                {
+                  "name": "\"]\""
+                },
+                {
+                  "name": "\"'\""
+                },
+                {
+                  "name": "\"\"\""
+                },
+                {
+                  "name": "\"<\""
+                },
+                {
+                  "name": "\",\""
+                },
+                {
+                  "name": "\">\""
+                },
+                {
+                  "name": "\".\""
+                },
+                {
+                  "name": "\"_\""
+                },
+                {
+                  "name": "\"-\""
+                },
+                {
+                  "name": "\"+\""
+                },
+                {
+                  "name": "\"=\""
+                },
+                {
+                  "name": "\"Spacebar\""
+                },
+                {
+                  "name": "\"Backspace\""
+                },
+                {
+                  "name": "\"Delete\""
+                },
+                {
+                  "name": "\"DownArrow\""
+                },
+                {
+                  "name": "\"End\""
+                },
+                {
+                  "name": "\"Enter\""
+                },
+                {
+                  "name": "\"Escape\""
+                },
+                {
+                  "name": "\"Home\""
+                },
+                {
+                  "name": "\"LeftArrow\""
+                },
+                {
+                  "name": "\"PageUp\""
+                },
+                {
+                  "name": "\"PageDown\""
+                },
+                {
+                  "name": "\"RightArrow\""
+                },
+                {
+                  "name": "\"UpArrow\""
+                },
+                {
+                  "name": "\"Alt+F1\""
+                },
+                {
+                  "name": "\"Alt+F2\""
+                },
+                {
+                  "name": "\"Alt+F3\""
+                },
+                {
+                  "name": "\"Alt+F4\""
+                },
+                {
+                  "name": "\"Alt+F5\""
+                },
+                {
+                  "name": "\"Alt+F6\""
+                },
+                {
+                  "name": "\"Alt+F7\""
+                },
+                {
+                  "name": "\"Alt+F8\""
+                },
+                {
+                  "name": "\"Alt+F9\""
+                },
+                {
+                  "name": "\"Alt+0\""
+                },
+                {
+                  "name": "\"Alt+1\""
+                },
+                {
+                  "name": "\"Alt+2\""
+                },
+                {
+                  "name": "\"Alt+3\""
+                },
+                {
+                  "name": "\"Alt+4\""
+                },
+                {
+                  "name": "\"Alt+5\""
+                },
+                {
+                  "name": "\"Alt+6\""
+                },
+                {
+                  "name": "\"Alt+7\""
+                },
+                {
+                  "name": "\"Alt+8\""
+                },
+                {
+                  "name": "\"Alt+9\""
+                },
+                {
+                  "name": "\"Alt+a\""
+                },
+                {
+                  "name": "\"Alt+b\""
+                },
+                {
+                  "name": "\"Alt+c\""
+                },
+                {
+                  "name": "\"Alt+d\""
+                },
+                {
+                  "name": "\"Alt+e\""
+                },
+                {
+                  "name": "\"Alt+f\""
+                },
+                {
+                  "name": "\"Alt+g\""
+                },
+                {
+                  "name": "\"Alt+h\""
+                },
+                {
+                  "name": "\"Alt+i\""
+                },
+                {
+                  "name": "\"Alt+j\""
+                },
+                {
+                  "name": "\"Alt+k\""
+                },
+                {
+                  "name": "\"Alt+l\""
+                },
+                {
+                  "name": "\"Alt+m\""
+                },
+                {
+                  "name": "\"Alt+n\""
+                },
+                {
+                  "name": "\"Alt+o\""
+                },
+                {
+                  "name": "\"Alt+p\""
+                },
+                {
+                  "name": "\"Alt+q\""
+                },
+                {
+                  "name": "\"Alt+r\""
+                },
+                {
+                  "name": "\"Alt+s\""
+                },
+                {
+                  "name": "\"Alt+t\""
+                },
+                {
+                  "name": "\"Alt+u\""
+                },
+                {
+                  "name": "\"Alt+v\""
+                },
+                {
+                  "name": "\"Alt+w\""
+                },
+                {
+                  "name": "\"Alt+x\""
+                },
+                {
+                  "name": "\"Alt+y\""
+                },
+                {
+                  "name": "\"Alt+z\""
+                },
+                {
+                  "name": "\"Alt+B\""
+                },
+                {
+                  "name": "\"Alt+F\""
+                },
+                {
+                  "name": "\"Alt+Spacebar\""
+                },
+                {
+                  "name": "\"Alt+.\""
+                },
+                {
+                  "name": "\"Alt+=\""
+                },
+                {
+                  "name": "\"Alt+-\""
+                },
+                {
+                  "name": "\"Alt+_\""
+                },
+                {
+                  "name": "\"Alt+Backspace\""
+                },
+                {
+                  "name": "\"Alt+<\""
+                },
+                {
+                  "name": "\"Alt+>\""
+                },
+                {
+                  "name": "\"Alt+?\""
+                },
+                {
+                  "name": "\"Ctrl+@\""
+                },
+                {
+                  "name": "\"Ctrl+Spacebar\""
+                },
+                {
+                  "name": "\"Ctrl+a\""
+                },
+                {
+                  "name": "\"Ctrl+b\""
+                },
+                {
+                  "name": "\"Ctrl+c\""
+                },
+                {
+                  "name": "\"Ctrl+d\""
+                },
+                {
+                  "name": "\"Ctrl+e\""
+                },
+                {
+                  "name": "\"Ctrl+f\""
+                },
+                {
+                  "name": "\"Ctrl+g\""
+                },
+                {
+                  "name": "\"Ctrl+h\""
+                },
+                {
+                  "name": "\"Ctrl+i\""
+                },
+                {
+                  "name": "\"Ctrl+j\""
+                },
+                {
+                  "name": "\"Ctrl+k\""
+                },
+                {
+                  "name": "\"Ctrl+l\""
+                },
+                {
+                  "name": "\"Ctrl+m\""
+                },
+                {
+                  "name": "\"Ctrl+n\""
+                },
+                {
+                  "name": "\"Ctrl+o\""
+                },
+                {
+                  "name": "\"Ctrl+p\""
+                },
+                {
+                  "name": "\"Ctrl+q\""
+                },
+                {
+                  "name": "\"Ctrl+r\""
+                },
+                {
+                  "name": "\"Ctrl+s\""
+                },
+                {
+                  "name": "\"Ctrl+t\""
+                },
+                {
+                  "name": "\"Ctrl+u\""
+                },
+                {
+                  "name": "\"Ctrl+v\""
+                },
+                {
+                  "name": "\"Ctrl+w\""
+                },
+                {
+                  "name": "\"Ctrl+x\""
+                },
+                {
+                  "name": "\"Ctrl+y\""
+                },
+                {
+                  "name": "\"Ctrl+z\""
+                },
+                {
+                  "name": "\"Ctrl+[\""
+                },
+                {
+                  "name": "\"Ctrl+\\\""
+                },
+                {
+                  "name": "\"Ctrl+]\""
+                },
+                {
+                  "name": "\"Ctrl+^\""
+                },
+                {
+                  "name": "\"Ctrl+_\""
+                },
+                {
+                  "name": "\"Ctrl+Backspace\""
+                },
+                {
+                  "name": "\"Ctrl+Delete\""
+                },
+                {
+                  "name": "\"Ctrl+End\""
+                },
+                {
+                  "name": "\"Ctrl+Home\""
+                },
+                {
+                  "name": "\"Ctrl+PageUp\""
+                },
+                {
+                  "name": "\"Ctrl+PageDown\""
+                },
+                {
+                  "name": "\"Ctrl+LeftArrow\""
+                },
+                {
+                  "name": "\"Ctrl+RightArrow\""
+                },
+                {
+                  "name": "\"Ctrl+Enter\""
+                },
+                {
+                  "name": "\"Shift+F3\""
+                },
+                {
+                  "name": "\"Shift+F8\""
+                },
+                {
+                  "name": "\"Shift+End\""
+                },
+                {
+                  "name": "\"Shift+Enter\""
+                },
+                {
+                  "name": "\"Shift+Home\""
+                },
+                {
+                  "name": "\"Shift+PageUp\""
+                },
+                {
+                  "name": "\"Shift+PageDown\""
+                },
+                {
+                  "name": "\"Shift+LeftArrow\""
+                },
+                {
+                  "name": "\"Shift+RightArrow\""
+                },
+                {
+                  "name": "\"Shift+UpArrow\""
+                },
+                {
+                  "name": "\"Shift+DownArrow\""
+                },
+                {
+                  "name": "\"Shift+Tab\""
+                },
+                {
+                  "name": "\"Shift+Insert\""
+                },
+                {
+                  "name": "\"Ctrl+C\""
+                },
+                {
+                  "name": "\"Ctrl+Shift+Enter\""
+                },
+                {
+                  "name": "\"Ctrl+Shift+LeftArrow\""
+                },
+                {
+                  "name": "\"Ctrl+Shift+RightArrow\""
+                },
+                {
+                  "name": "\"Ctrl+Alt+y\""
+                },
+                {
+                  "name": "\"Ctrl+Alt+]\""
+                },
+                {
+                  "name": "\"Ctrl+Alt+?\""
                 }
               ]
             },
